index.html,mixins,variables,sass modified

--- a/styles/sass/partials/_variables.scss
+++ b/styles/sass/partials/_variables.scss
@@ -1,5 +1,6 @@
-$primaryColor: #21ecce;
-
-h1 {
-  color: $primaryColor;
-}
+$primaryColor: #0c1423;
+$secondaryColor: #0f614e;
+$accentColor: #86e0f9;
+$fontColor: #fff;
+$fontBarlow: 'Barlow', sans-serif;
+$fontLato: 'Lato', sans-serif;
