--- a/styles/sass/style.scss
+++ b/styles/sass/style.scss
@@ -2,7 +2,30 @@
 @import './partials/mixin';
 @import './partials/setup';
 @import './partials/nav';
+//Google font
+@import url('https://fonts.googleapis.com/css2?family=Barlow:wght@700&family=Lato&display=swap');
+
 * {
   margin: 0;
   padding: 0;
+}
+
+body {
+  font-size: 62.5%;
+}
+.wrapper {
+  max-width: 1200px;
+  width: 90%;
+  margin: 0 auto;
+}
+
+header {
+  height: 100vh;
+  background-color: red;
+}
+
+h1 {
+  font-family: $fontBarlow;
+  font-size: 13.8rem;
+  line-height: 12.6rem;
 }
