--- a/styles/sass/partials/_variables.scss
+++ b/styles/sass/partials/_variables.scss
@@ -1,6 +1,6 @@
 $primaryColor: #0c1423;
 $secondaryColor: #0f614e;
 $accentColor: #86e0f9;
-$fontColor: #fff;
+$baseFontColor: #fff;
 $fontBarlow: 'Barlow', sans-serif;
 $fontLato: 'Lato', sans-serif;
