--- a/styles/sass/style.scss
+++ b/styles/sass/style.scss
@@ -13,6 +13,11 @@
 body {
   font-size: 62.5%;
 }
+
+body {
+  font-size: 1rem;
+}
+
 .wrapper {
   max-width: 1200px;
   width: 90%;
@@ -20,12 +25,12 @@ body {
 }
 
 header {
+  background-image: url(../assets/header-image.jpg);
+  background-position: center center;
+  background-size: cover;
   height: 100vh;
-  background-color: red;
 }
 
 h1 {
-  font-family: $fontBarlow;
-  font-size: 13.8rem;
-  line-height: 12.6rem;
+  @include headingSize($fontBarlow, 138px, 128px);
 }
