--- a/styles/style.css
+++ b/styles/style.css
@@ -270,6 +270,31 @@ html {
   overflow: hidden;
 }
 
+nav {
+  width: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: end;
+      -ms-flex-pack: end;
+          justify-content: flex-end;
+  height: 60px;
+  line-height: 60px;
+}
+
+nav ul {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  list-style: none;
+}
+
+nav a {
+  padding: 1rem;
+  text-decoration: none;
+  color: #fff;
+}
+
 * {
   margin: 0;
   padding: 0;
@@ -279,6 +304,10 @@ body {
   font-size: 62.5%;
 }
 
+body {
+  font-size: 1rem;
+}
+
 .wrapper {
   max-width: 1200px;
   width: 90%;
@@ -286,12 +315,14 @@ body {
 }
 
 header {
+  background-image: url(../assets/header-image.jpg);
+  background-position: center center;
+  background-size: cover;
   height: 100vh;
-  background-color: red;
 }
 
 h1 {
   font-family: "Barlow", sans-serif;
-  font-size: 13.8rem;
-  line-height: 12.6rem;
+  font-size: 138px;
+  line-height: 128px;
 }
