made some changes on index.html style.css

--- a/styles/sass/partials/_mixin.scss
+++ b/styles/sass/partials/_mixin.scss
@@ -3,3 +3,9 @@
   font-size: $fontSize;
   line-height: $lineHeight;
 }
+
+@mixin elementSize($fontFamily, $fontSize, $letterSpace) {
+  font-family: $fontFamily;
+  font-size: $fontSize;
+  letter-spacing: $letterSpace;
+}
