--- a/styles/sass/partials/_nav.scss
+++ b/styles/sass/partials/_nav.scss
@@ -1,18 +1,19 @@
 nav {
-  width: 100%;
   display: flex;
+  width: 100%;
   justify-content: flex-end;
-  height: 60px;
-  line-height: 60px;
-
+  height: 80px;
+  line-height: 80px;
   ul {
     display: flex;
     list-style: none;
   }
-
   a {
-    padding: 1rem;
     text-decoration: none;
     color: $baseFontColor;
+    padding: 20px;
+    &:hover {
+      color: $accentColor;
+    }
   }
 }
