--- a/styles/style.css
+++ b/styles/style.css
@@ -271,15 +271,15 @@ html {
 }
 
 nav {
-  width: 100%;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  width: 100%;
   -webkit-box-pack: end;
       -ms-flex-pack: end;
           justify-content: flex-end;
-  height: 60px;
-  line-height: 60px;
+  height: 80px;
+  line-height: 80px;
 }
 
 nav ul {
@@ -290,14 +290,24 @@ nav ul {
 }
 
 nav a {
-  padding: 1rem;
   text-decoration: none;
   color: #fff;
+  padding: 20px;
+}
+
+nav a:hover {
+  color: #86e0f9;
 }
 
 * {
   margin: 0;
   padding: 0;
+}
+
+img {
+  max-width: 100%;
+  width: 100%;
+  display: block;
 }
 
 body {
@@ -318,11 +328,119 @@ header {
   background-image: url(../assets/header-image.jpg);
   background-position: center center;
   background-size: cover;
-  height: 100vh;
+  height: calc(100vh - 80px);
 }
 
 h1 {
   font-family: "Barlow", sans-serif;
   font-size: 138px;
-  line-height: 128px;
+  line-height: 126px;
+}
+
+h2 {
+  font-family: "Barlow", sans-serif;
+  font-size: 80px;
+  line-height: 92px;
+}
+
+h3 {
+  font-family: "Barlow", sans-serif;
+  font-size: 42px;
+  letter-spacing: 1px;
+  margin-bottom: 20px;
+}
+
+h4 {
+  font-family: "Barlow", sans-serif;
+  font-size: 32px;
+  letter-spacing: 1px;
+  margin-bottom: 20px;
+}
+
+nav {
+  font-family: "Barlow", sans-serif;
+  font-size: 20px;
+  line-height: 29px;
+  letter-spacing: 1px;
+}
+
+button {
+  font-family: "Barlow", sans-serif;
+  font-size: 20px;
+  line-height: 32px;
+  letter-spacing: 1px;
+  background-color: #86e0f9;
+  padding: 10px 15px;
+  border: none;
+  margin-top: 30px;
+}
+
+body {
+  font-family: "Lato", sans-serif;
+  font-size: 20px;
+  line-height: 32px;
+  color: white;
+}
+
+.header-box-image {
+  z-index: 1;
+  position: absolute;
+  right: 0;
+  bottom: -25%;
+}
+
+.section-1 {
+  padding: 60px;
+  text-align: center;
+  background-color: #0c1423;
+  height: 100vh;
+}
+
+.section-1 h3 {
+  margin-top: 200px;
+  margin-bottom: 30px;
+}
+
+.section-2 {
+  background-color: #0f614e;
+  padding: 60px 0;
+}
+
+article {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  padding: 100px 0;
+}
+
+.right-image,
+.left-image {
+  max-width: 100%;
+  width: 100%;
+  position: relative;
+  background-color: #86e0f9;
+}
+
+.right-image img {
+  position: absolute;
+  bottom: 10%;
+  right: 5%;
+}
+
+.left-image img {
+  position: absolute;
+  bottom: 10%;
+  right: 5%;
+}
+
+.right-side-content .left-side-content {
+  width: calc(50% - 40px);
+}
+
+.right-side-content {
+  margin-left: 40px;
+}
+
+.left-side-content {
+  margin-right: 40px;
 }
